--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,19 +21,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = webdriver.Chrome()\n",
+    "# driver = webdriver.Chrome()\n",
     "\n",
-    "browser = Browser('chrome', headless=True)\n",
-    "\n",
+    "# browser = Browser('chrome', headless=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "executable_path = {'executable_path': 'C:\\\\Users\\\\jbpar\\\\Desktop\\\\git\\\\Mission_to_Mars\\\\chromedriver.exe'}\n",
+    "browser = Browser('chrome', **executable_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Websizzle used for scraping\n",
     "url = 'https://mars.nasa.gov/news/'\n",
     "# Hey, driver! Go get it.\n",
     "browser.visit(url)\n",
-    "driver.get(url)"
+    "# driver.get(url)"
    ]
   },
   {
@@ -45,17 +62,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 191,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Element check - optional\n",
-    "# browser.is_element_present_by_css(\"ul.item_list li.slide\", wait_time=1)"
+    "browser.is_element_present_by_css(\"ul.item_list li.slide\", wait_time=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<li class=\"slide\"><div class=\"image_and_description_container\"><a href=\"/news/8458/a-rover-pit-stop-at-jpl/\" target=\"_self\"><div class=\"rollover_description\"><div class=\"rollover_description_inner\">Working like a finely honed machine, a team of engineers in this time-lapse video clip install test wheels on another finely honed machine: NASA's Mars 2020 rover.</div><div class=\"overlay_arrow\"><img alt=\"More\" src=\"/assets/overlay-arrow.png\"/></div></div><div class=\"list_image\"><img alt=\"A team of engineers at NASA's Jet Propulsion Laboratory in Pasadena, California, install the legs and wheels — otherwise known as the mobility suspension — on the Mars 2020 rover.\" src=\"/system/news_items/list_view_images/8458_rover-time-lapse-th.jpg\"/></div><div class=\"bottom_gradient\"><div><h3>A Rover Pit Stop at JPL</h3></div></div></a><div class=\"list_text\"><div class=\"list_date\">July 12, 2019</div><div class=\"content_title\"><a href=\"/news/8458/a-rover-pit-stop-at-jpl/\" target=\"_self\">A Rover Pit Stop at JPL</a></div><div class=\"article_teaser_body\">Working like a finely honed machine, a team of engineers in this time-lapse video clip install test wheels on another finely honed machine: NASA's Mars 2020 rover.</div></div></div></li>"
+       "<li class=\"slide\"><div class=\"image_and_description_container\"><a href=\"/news/8459/want-to-colonize-mars-aerogel-could-help/\" target=\"_self\"><div class=\"rollover_description\"><div class=\"rollover_description_inner\">Researchers are studying whether a wonder material used in Mars rovers could help warm parts of the Red Planet rich in water ice.</div><div class=\"overlay_arrow\"><img alt=\"More\" src=\"/assets/overlay-arrow.png\"/></div></div><div class=\"list_image\"><img alt=\"Scientists are exploring how aerogel, a translucent, Styrofoam-like material, could be used as a building material on Mars.\" src=\"/system/news_items/list_view_images/8459_PIA23343-320x240.jpg\"/></div><div class=\"bottom_gradient\"><div><h3>Want to Colonize Mars? Aerogel Could Help</h3></div></div></a><div class=\"list_text\"><div class=\"list_date\">July 15, 2019</div><div class=\"content_title\"><a href=\"/news/8459/want-to-colonize-mars-aerogel-could-help/\" target=\"_self\">Want to Colonize Mars? Aerogel Could Help</a></div><div class=\"article_teaser_body\">Researchers are studying whether a wonder material used in Mars rovers could help warm parts of the Red Planet rich in water ice.</div></div></div></li>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,16 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\"><a href=\"/news/8458/a-rover-pit-stop-at-jpl/\" target=\"_self\">A Rover Pit Stop at JPL</a></div>"
+       "<div class=\"content_title\"><a href=\"/news/8459/want-to-colonize-mars-aerogel-could-help/\" target=\"_self\">Want to Colonize Mars? Aerogel Could Help</a></div>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'A Rover Pit Stop at JPL'"
+       "'Want to Colonize Mars? Aerogel Could Help'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"article_teaser_body\">Working like a finely honed machine, a team of engineers in this time-lapse video clip install test wheels on another finely honed machine: NASA's Mars 2020 rover.</div>"
+       "<div class=\"article_teaser_body\">Researchers are studying whether a wonder material used in Mars rovers could help warm parts of the Red Planet rich in water ice.</div>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Working like a finely honed machine, a team of engineers in this time-lapse video clip install test wheels on another finely honed machine: NASA's Mars 2020 rover.\""
+       "'Researchers are studying whether a wonder material used in Mars rovers could help warm parts of the Red Planet rich in water ice.'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,37 +211,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Open, visit, and scrape the proper site\n",
     "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
     "browser.visit(url)\n",
-    "driver.get(url)"
+    "# driver.get(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need to see what's up with the \"Full Image\" button\n",
+    "# full_image_elem = driver.find_element_by_id(\"full_image\")\n",
+    "full_image_elem = browser.find_by_id('full_image')\n",
+    "\n",
+    "# CLICK the \"Full Image\" button\n",
+    "full_image_elem.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need to see what's up with the \"More Info\" button\n",
+    "# more_info = driver.find_element_by_partial_link_text('more info')\n",
+    "more_info = browser.find_link_by_partial_text('more info')\n",
+    "# CLICK the \"More Info\" button\n",
+    "more_info.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html = browser.html\n",
+    "img_soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'WebDriver' object has no attribute 'findElement'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-71-8383ddc1b276>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Need to see what's up with the \"Full Image\" button\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mfull_image_elem\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindElement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"full_image\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m# CLICK the \"Full Image button\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#full_image_elem.click()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'WebDriver' object has no attribute 'findElement'"
+     "data": {
+      "text/plain": [
+       "'/spaceimages/images/largesize/PIA14934_hires.jpg'"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Traverse the CSS\n",
+    "# <figure class=\"lede\"> --> <a href = \"blahblah\"> --> <img alt/title/class=\"blah\" src=\"WHAT WE WANT\">\n",
+    "\n",
+    "#img_url_rel = img_soup.select_one('figure.lede a img')#.get(\"src\") # THIS IS THE IMAGE SOURCE\n",
+    "img_url_rel = img_soup.select_one('figure.lede a img').get(\"src\")\n",
+    "img_url_rel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA14934_hires.jpg\n"
      ]
     }
    ],
    "source": [
-    "# Need to see what's up with the \"Full Image\" button\n",
-    "full_image_elem = driver.findElement(By.id(\"full_image\"))\n",
-    "# CLICK the \"Full Image button\"\n",
-    "#full_image_elem.click()"
+    "#Create url by appending things to other things\n",
+    "\n",
+    "url_base = 'https://www.jpl.nasa.gov'\n",
+    "\n",
+    "img_url = f'{url_base}{img_url_rel}'\n",
+    "print(img_url) #Check the link"
    ]
   },
   {
