--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -496,7 +496,7 @@
     }
    ],
    "source": [
-    "for i in range(1,9,2):\n",
+    "for i in range(1,9):\n",
     "    hemi_dict = {}\n",
     "    \n",
     "    links = hemi_soup.find_all('a', class_=\"product-item\")\n",
@@ -533,7 +533,9 @@
   {
    "cell_type": "code",
    "execution_count": 397,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "AttributeError",
